# LooTunes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  arm-none-eabi-gcc.cmake  audio_player.cpp  audio_player.h  button.cpp  button.h  config.cpp  config.h  controller.cpp  controller.h  defines.h  feistel.cpp  feistel.h  file_navigator.cpp  file_navigator.h  gpio.cpp  gpio.h  ir.cpp  ir.h  lcd.cpp  lcd.h  light_sensor.cpp  light_sensor.h  main.cpp  playback.cpp  playback.h  playback_state.cpp  playback_state.h  random.cpp  random.h  sd.cpp  sd.h  spi.h  teststandalone.cpp  utility.h  watchdog.h
HAL/include/: py32f0xx_hal_adc.h  py32f0xx_hal_crc.h  py32f0xx_hal_dma_ex.h  py32f0xx_hal_exti.h  py32f0xx_hal_flash.h  py32f0xx_hal_gpio_ex.h  py32f0xx_hal_iwdg.h  py32f0xx_hal_lptim.h  py32f0xx_hal_rcc.h  py32f0xx_hal_rcc_ex.h  py32f0xx_hal_rtc_ex.h  py32f0xx_hal_spi.h  py32f0xx_hal_tim.h  py32f0xx_hal_usart.h
HAL/src/: py32f0xx_hal.c  py32f0xx_hal_adc_ex.c  py32f0xx_hal_iwdg.c  py32f0xx_hal_pwr.c  py32f0xx_hal_rtc.c  py32f0xx_hal_tim.c  py32f0xx_hal_uart.c  py32f0xx_hal_wwdg.c
SD/: config.ini
assets/: convert.sh
assets/SD_Card/: config.ini
assets/prebuilt-fw/: LooTunes.hex  LooTunes.map
case/: base.stl  body.stl  cap.stl
firmware/: CMakeLists.txt  audio_player.cpp  button.cpp  button.h  config.cpp  controller.cpp  controller.h  feistel.cpp  feistel.unop  file_navigator.cpp  file_navigator.h  gpio.cpp  gpio.h  light_sensor.cpp  light_sensor.h  main.cpp  openocd.cfg  py32f0xx_hal_conf.h  random.cpp  sd.cpp  spi.h  watchdog.h
firmware/gui/: draw_vector.h  element_pool.c  rectangle.c  text.c
gui/: draw_vector.c  element_pool.h  rectangle.h  text.h
hardware/: FxDev.bak  FxDev.kicad_sym  FxLooTunes.kicad_pcb  FxLooTunes.kicad_prl  FxLooTunes.kicad_pro  FxLooTunes.kicad_sch  FxLooTunesv1.kicad_pcb  FxLooTunesv1.kicad_prl  FxLooTunesv1.kicad_pro  FxLooTunesv1.kicad_sch  Puya.bak  Puya.kicad_sym  easyeda2kicad.kicad_sym  fp-info-cache  fp-lib-table  micro_sd_card_cd.kicad_sym  sym-lib-table
hardware/FxDev.pretty/: logo.kicad_mod  (+3 more)
(+81 files in other folders)
